week3/style.css
* {
    font-family: 'Courier New', Courier, monospace;
    /* outline: 1px solid red;
    outline-offset: -1px; */
    color: white;
    scroll-behavior: smooth;
}

body {
    background-color: rgba(25, 25, 25, 1);
    overflow-x: hidden;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: auto;
}

header span {
    color: #fff01f;
    font-size: 2rem;
}

header span:hover {
    text-shadow: 0px 0px 25px white;
    transition-duration: 250ms;
    transition-timing-function: ease-in-out;
}


header img {
    padding: 40px;
    width: 33vw;
}


header #header-right {
    vertical-align: center;
}

header #header-right p {
    color: white;
}

nav {
    position: sticky;
    top: 0px;
    display: flex;
    justify-content: center;
    backdrop-filter: blur(2px);
}

nav li {
    text-align: center;
    width: 5rem;
    display: inline-block; 
}

nav li a {
    text-decoration: none;
}

nav li a:hover {
    color: #fff01f;
    text-shadow: 0px 0px 15px  #fff01f;
    transition-duration: 250ms;
}

table, th, td {
    border-collapse: collapse;
}

table {
    margin-top: 100px;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.2rem;
    
}

th, td {
    padding: 25px;
}

th {
    color:#fff01f;
    font-weight: bold;
    text-transform: uppercase;
}
td {
    text-align: center;
}   

th:hover, td:hover {
    background-color: rgba(255, 255, 255, .1);
    transition-duration: 50ms;
    transition-timing-function: ease-in-out;
}

main::before {
    /* Fake Circle */
    content: "";
    position: absolute;
    z-index: -1;
    width: 65vw;
    aspect-ratio: 1;
    top: 25vh;
    left: -20vw;
    display: block;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, .05);
    outline: 8rem rgba(255, 255, 255, .05) solid;
}

#real-circle {
    position: absolute;
    z-index: -1;
    width: 65vw;
    aspect-ratio: 1;
    right: -15vw;
    border-radius: 50%;
    /* background-color: rgba(255, 255, 255, .05); */
    outline: 4rem rgba(255, 255, 255, .05) dotted;
}

section.space {
    padding-top: 60px;
    height: 500px;
}

blockquote {
    display: block;
    padding: 32px;
    background-color: rgba(0, 0, 0, .25);
    font-size: 1.2rem;
    text-align: center;
    margin: 0;
    backdrop-filter: blur(4px);
}

blockquote footer {
    text-align: right;
    margin-right: 32px;
}

#about {
    font-size: .8rem;
}

#up-arrow i {
    justify-self: center;
    color: yellow;
}

#up-arrow p {
    text-align: center;
}

footer ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

